[WangMin] fix-4: add a att named word-break and the value is break-all to break the word wrap

--- a/index.css
+++ b/index.css
@@ -143,6 +143,7 @@ body, h1, h6, p {
   font-size: 12px;
   column-count: 3;
   column-gap: 15px;
+  word-break: break-all;
 }
 
 .p-multi > p {
